XMLtoCSV/objects/unpackaged/objects/Stakeholder_Preference_vod__c.object
<CustomObject>
    <description>Captures information on HCP/HCO channel and offer preferences</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate preferences to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stakeholder Preferences</relationshipLabel>
        <relationshipName>Stakeholder_Preferences_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <description>Designates what record type Stakeholder uses</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_vod__c</fullName>
        <description>Stakeholder preference name</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Defines type of field for title</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spectrum_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_vod__c</fullName>
        <description>Stores the value for stakeholder preference. 1 lowest preference, 5 highest preference</description>
        <label>Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stakeholder Preference</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>Stakeholder Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Preferences</pluralLabel>
    <recordTypes>
        <fullName>Channel_Preference_vod</fullName>
        <active>true</active>
        <description>Used for identifying HCP/HCO channel type preferences</description>
        <label>Channel_Preference_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Offer_Preference_vod</fullName>
        <active>true</active>
        <description>Used for identifying HCP/HCO offer type preferences</description>
        <label>Offer_Preference_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>